	PR target/52530 	Revert: 	2012-03-04  H.J. Lu  <hongjiu.lu@intel.com>

* config/i386/i386.c (ix86_print_operand_address): Only handle
	zero-extended DImode addresses.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@185103 138bc75d-0d04-0410-961f-82ee72b054a4